--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "tsnode",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "repository": "git@github.com:gwelter/tsnode.git",
   "author": "Guilherme André Welter <guilherme.a.welter@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "sucrase-node src/server.ts",
-    "build": "sucrase ./src -d ./dist --transforms typescript,imports"
+    "test": "NODE_ENV=testing jest --forceExit --detectOpenHandles  --silent",
+    "dev": "nodemon src/index.ts",
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
+    "restart": "rimraf dist && npm run build && npm start",
+    "start": "NODE_ENV=production PORT=5001 HOST=127.0.0.1 node dist/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
+    "@types/lodash": "^4.14.135",
     "@types/mongoose": "^5.5.7",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
@@ -23,6 +27,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
@@ -30,8 +35,10 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.6.2"
   }
 }
