--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
+    "@types/jest": "^24.0.15",
     "@types/lodash": "^4.14.135",
     "@types/mongoose": "^5.5.7",
+    "@types/supertest": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
     "eslint": "^6.0.1",
@@ -32,6 +34,7 @@
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
     "sucrase": "^3.10.1",
+    "supertest": "^4.0.2",
     "typescript": "^3.5.2"
   },
   "dependencies": {
