--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.0",
     "@types/jest": "^24.0.15",
     "@types/lodash": "^4.14.135",
+    "@types/mongodb": "^3.1.28",
     "@types/mongoose": "^5.5.7",
     "@types/supertest": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
@@ -35,6 +36,7 @@
     "rimraf": "^2.6.3",
     "sucrase": "^3.10.1",
     "supertest": "^4.0.2",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.5.2"
   },
   "dependencies": {
